<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuActivity">


    <TextView
        android:id="@+id/txt_Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_MenuAddQuiz"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_a_quiz"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Menu" />

    <Button
        android:id="@+id/btn_menuRemoveQuiz"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/remove_a_quiz"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_MenuAddQuiz" />

    <Button
        android:id="@+id/btn_MenuPracticeQuiz"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/practice_a_quiz"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menuRemoveQuiz" />

    <Button
        android:id="@+id/btn_MenuViewScore"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/view_scores"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_MenuPracticeQuiz" />

    <Button
        android:id="@+id/btn_MenuLogout"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_MenuViewScore" />

    <TextView
        android:id="@+id/textMenuUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>